--- a/MathLib/MathLib/MathLib.vcxproj
+++ b/MathLib/MathLib/MathLib.vcxproj
@@ -134,10 +134,22 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\MathApp\Utility.cpp" />
+    <ClCompile Include="..\MathApp\Matrix.cpp" />
+    <ClCompile Include="..\MathApp\Vector3.cpp" />
+    <ClCompile Include="Matrix2.cpp" />
+    <ClCompile Include="Matrix3.cpp" />
+    <ClCompile Include="Matrix4.cpp" />
+    <ClCompile Include="Vector2.cpp" />
+    <ClCompile Include="Vector4.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\MathApp\Utility.h" />
+    <ClInclude Include="..\MathApp\Matrix.h" />
+    <ClInclude Include="..\MathApp\Vector3.h" />
+    <ClInclude Include="Matrix2.h" />
+    <ClInclude Include="Matrix3.h" />
+    <ClInclude Include="Matrix4.h" />
+    <ClInclude Include="Vector2.h" />
+    <ClInclude Include="Vector4.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
