--- a/MathLib/MathApp/MathApp.vcxproj
+++ b/MathLib/MathApp/MathApp.vcxproj
@@ -150,13 +150,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MathApp.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="unittest.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MathApp.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="unittest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MathLib\MathLib.vcxproj">
